# example_cpp_package

./: .gitignore  README.md
.github/workflows/: build.yml
ros_params_demo/: CMakeLists.txt  README.md  package.xml
ros_params_demo/config/: config.yaml
ros_params_demo/include/: ros_params_demo.h
ros_params_demo/launch/: ros_params_demo_node.launch
ros_params_demo/src/: ros_params_demo.cpp  simple_ros_node.cpp
simple_cpp_project/: CMakeLists.txt
simple_cpp_project/include/: lib1.h
simple_cpp_project/src/: lib1.cpp  main.cpp
simple_ros_node/include/: example_core.h  lib1.h
simple_ros_node/src/: example_core.cpp  lib1.cpp
simple_ros_package/: CMakeLists.txt  package.xml
simple_ros_package/include/: example_core.h
simple_ros_package/src/: example_core.cpp  lib1.cpp  simple_ros_node.cpp
